added hints for:  - packaging  - execution without IDE